<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".EmployeeDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/content_img"
                android:src="@drawable/ic_account_circle_grey_96dp"
                android:transitionName="@string/transition_dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/employeeNameTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:transitionName="@string/transition_emp_name"
                app:layout_constraintBottom_toBottomOf="@+id/dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dp"
                app:layout_constraintTop_toTopOf="@+id/dp" />

            <TextView
                android:id="@+id/empIdLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/prompt_employee_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dp" />

            <TextView
                android:id="@+id/empId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="@+id/empIdLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/empIdLabel"
                app:layout_constraintTop_toTopOf="@+id/empIdLabel" />

            <TextView
                android:id="@+id/designationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/prompt_designation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/empIdLabel" />

            <TextView
                android:id="@+id/designation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="@+id/designationLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/designationLabel"
                app:layout_constraintTop_toTopOf="@+id/designationLabel" />

            <TextView
                android:id="@+id/cityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/prompt_city"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/designationLabel" />

            <TextView
                android:id="@+id/city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="@+id/cityLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cityLabel"
                app:layout_constraintTop_toTopOf="@+id/cityLabel" />

            <TextView
                android:id="@+id/joinedDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/prompt_joined_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cityLabel" />

            <TextView
                android:id="@+id/joinedDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="@+id/joinedDateLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/joinedDateLabel"
                app:layout_constraintTop_toTopOf="@+id/joinedDateLabel" />

            <TextView
                android:id="@+id/salaryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/prompt_salary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/joinedDateLabel" />

            <TextView
                android:id="@+id/salary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="@+id/salaryLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/salaryLabel"
                app:layout_constraintTop_toTopOf="@+id/salaryLabel" />
        </android.support.constraint.ConstraintLayout>

        <ImageView
            android:id="@+id/captureImgView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_capture_img"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"/>

        <Button
            android:id="@+id/cameraBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_take_a_picture"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            style="@style/Widget.AppCompat.Button.Colored"/>
    </LinearLayout>

</ScrollView>